VERSION 5.1.2
=============

* ADDED: library(gradient) defining class gradient for making gradient
  fill-patterns.

* MODIFIED: Images are only turned read-only if a named image is created
  from a data object.

* ADDED: Handling of HSV colour model.  See `colour->initialise'.

* FIXED: Allow .bm (old X11 bitmaps) the contain CRLF rather than plain
  LF for correct loading on Windows/Unix corrupted files.

* FIXED: Include dialog/bitmaps files in the Windows distribution.

* MODIFIED: PceEmacs user-init file changes from ~/.pceemacsrc to
  user_profile('pceemacs.ini') on Windows.

* FIXED: Modal window handling, especially for transient windows.  A transient
  modal window is now by defailt placed on the top-left of the parent window.

* FIXED: Maintain and handle directory in Windows file-finder (bug introduced
  while starting to use the standard GetOpenFilename()).

* ADDED: PceEmacs: Added the (fairly experimental) HTML, SGML and XML modes
  to the standard library.

* FIXED: Make GUI-tracer use library(prolog_predicate_item), avoiding
  a name-clash with private variation of this library.

* FIXED: Effectively block recursion handling keyboard events in
  `window->event'.

* ADDED: `window->normalise': optional mode-argument to allow normalisation
  in only one direction.

* FIXED/ADDED: library(pce_toc), class toc_window: improved normalisation
  handling.  Also added handling of HOME, END, PageUp and PageDown buttons.

* ADDED: `tree->root' extra optional argument `relink' to allow adding a
  new root above the current one.

* ADDED: `directory->same', analogous with `file->same'.

* ADDED: Lots of extras to the class win_printer, providing printing
  support in Windows.  Added this to PceDraw.

* FIXED: Add extension on Windows display<-win_file_name

* FIXED: Handling of recent-file menu in PceDraw.

* FIXED: Class text_buffer generation when making first change was not
  incremented, causing colourisation inconsistencies.
