@@ -489,6 +489,28 @@ AC_HEADER_TIME
 AC_HEADER_DIRENT
 AC_C_CHAR_UNSIGNED
 
+if test "$ac_cv_func_vsscanf" = "yes"; then
+AC_MSG_CHECKING("cast to va_list")
+AC_TRY_RUN(
+[
+#include <stdarg.h>
+main()
+{ long v[2];
+  void *ptr[2];
+
+  ptr[0] = &v[0];
+  ptr[1] = &v[1];
+  vsscanf("34 45", "%d%d", (va_list)ptr);
+  if ( v[0] == 34 && v[1] == 45 )
+    exit(0);
+
+  exit(1);
+}], AC_DEFINE(HAVE_CAST_VA_LIST)
+    AC_MSG_RESULT("yes"),
+    AC_MSG_RESULT("no"),
+    AC_MSG_RESULT("assuming no"))
+fi
+
 if test "$ac_cv_func_ftime" != "yes"; then
 AC_MSG_CHECKING("tm_gmtoff")
 AC_TRY_COMPILE(
